<resources>
    <string name="app_name">bet&amp;WIn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">bet&amp;WIn</string>
    <string name="bets">Home</string>
    <string name="my_bets">My bets</string>
    <string name="my_account">My account</string>
    <string name="settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="my_stats">My stats</string>
</resources>
