<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bets"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bets" />
        <item
            android:id="@+id/nav_my_bets"
            android:icon="@drawable/ic_action_dice_icon_214x214"
            android:title="@string/my_bets" />
        <item
            android:id="@+id/nav_my_stats"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/my_stats" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
